--- a/src/webparts/faqs/FaqsWebPart.manifest.json
+++ b/src/webparts/faqs/FaqsWebPart.manifest.json
@@ -3,25 +3,18 @@
   "id": "bee41b61-0097-47f1-9c06-23847cb8b250",
   "alias": "FaqsWebPart",
   "componentType": "WebPart",
-
-  // The "*" signifies that the version should be taken from the package.json
   "version": "*",
   "manifestVersion": 2,
-
-  // If true, the component can only be installed on sites where Custom Script is allowed.
-  // Components that allow authors to embed arbitrary script code should set this to true.
-  // https://support.office.com/en-us/article/Turn-scripting-capabilities-on-or-off-1f2c515f-5d7e-448a-9fd7-835da935584f
   "requiresCustomScript": false,
   "supportedHosts": ["SharePointWebPart"],
-
   "preconfiguredEntries": [{
-    "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
+    "groupId": "5c03119e-3074-46fd-976b-c60198311f70", 
     "group": { "default": "Other" },
-    "title": { "default": "faqs" },
-    "description": { "default": "faqs description" },
-    "officeFabricIconFontName": "Page",
+    "title": { "default": "FAQs" },
+    "description": { "default": "FAQs regarding the Microsoft 365 programme." },
+    "officeFabricIconFontName": "CheckboxComposite",
     "properties": {
-      "description": "faqs"
+      "description": "FAQs regarding the Microsoft 365 programme."
     }
   }]
 }
