--- a/src/webparts/popupModal/PopupModalWebPart.manifest.json
+++ b/src/webparts/popupModal/PopupModalWebPart.manifest.json
@@ -3,25 +3,18 @@
   "id": "a8e3f90f-73a6-4531-b086-026766c30704",
   "alias": "PopupModalWebPart",
   "componentType": "WebPart",
-
-  // The "*" signifies that the version should be taken from the package.json
   "version": "*",
   "manifestVersion": 2,
-
-  // If true, the component can only be installed on sites where Custom Script is allowed.
-  // Components that allow authors to embed arbitrary script code should set this to true.
-  // https://support.office.com/en-us/article/Turn-scripting-capabilities-on-or-off-1f2c515f-5d7e-448a-9fd7-835da935584f
   "requiresCustomScript": false,
   "supportedHosts": ["SharePointWebPart"],
-
   "preconfiguredEntries": [{
-    "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
+    "groupId": "5c03119e-3074-46fd-976b-c60198311f70",
     "group": { "default": "Other" },
-    "title": { "default": "PopupModal" },
-    "description": { "default": "A modal, that pops up." },
-    "officeFabricIconFontName": "Page",
+    "title": { "default": "Got a question?" },
+    "description": { "default": "Submit questions regarding the Microsoft 365 programme." },
+    "officeFabricIconFontName": "StatusCircleQuestionMark",
     "properties": {
-      "description": "PopupModal"
+      "description": "Submit questions regarding the Microsoft 365 programme."
     }
   }]
 }
