--- a/src/webparts/faqs/FaqsWebPart.manifest.json
+++ b/src/webparts/faqs/FaqsWebPart.manifest.json
@@ -7,6 +7,7 @@
   "manifestVersion": 2,
   "requiresCustomScript": false,
   "supportedHosts": ["SharePointWebPart"],
+  "supportsFullBleed": true,
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", 
     "group": { "default": "Other" },
@@ -14,7 +15,7 @@
     "description": { "default": "FAQs regarding the Microsoft 365 programme." },
     "officeFabricIconFontName": "CheckboxComposite",
     "properties": {
-      "description": "FAQs regarding the Microsoft 365 programme."
+      "description": "FAQs - Microsoft 365 programme"
     }
   }]
 }
